# Pidgin

./: .hgignore  COPYRIGHT  ChangeLog  ChangeLog.API  Dockerfile.doxygen  Doxyfile.in  README  bitbucket-pipelines.yml  config.h.mingw  configure.ac  convey.yaml  convey.yml  meson.build  meson_options.txt  pidgin.spec.in  valgrind-suppressions
doc/: finch3.1.in  meson.build  pidgin3.1.in
doc/reference/finch/: finch-docs.xml  meson.build
doc/reference/libpurple/: libpurple-docs.xml  meson.build  plugin_i18n.xml  signals_xfer.xml  tut_c_plugins.xml  ui_ops.xml
doc/reference/pidgin/: meson.build  pidgin-docs.xml
doc/reference/protocols/: meson.build
finch/: Makefile.am  finch.c  finch.h  gntaccount.c  gntaccount.h  gntblist.c  gntblist.h  gntconn.c  gntconn.h  gntconv.c  gntconv.h  gntdebug.c  gntdebug.h  gntidle.c  gntidle.h  gntlog.c  gntlog.h  gntmedia.c  gntmedia.h  gntmenuutil.c  gntmenuutil.h  gntnotify.c  gntnotify.h  gntplugin.c  gntplugin.h  gntpounce.c  gntpounce.h  gntprefs.c  gntprefs.h  gntrequest.c  gntrequest.h  gntroomlist.c  gntroomlist.h  gntsound.c  gntsound.h  gntstatus.c  gntstatus.h  gntui.c  gntui.h  gntxfer.c  (+3 more)
finch/libgnt/: gnt.h  gntfilesel.c  gntmain.c  gntmenuitem.c  gntprogressbar.c  gntutils.c  gntwidget.c  gntwm.c  meson.build  test.c
finch/libgnt/test/: combo.c  keys.c  meson.build  tv.c
finch/plugins/: Makefile.am  gntclipboard.c  gntgf.c  gnthistory.c  gnttinyurl.c  grouping.c  lastlog.c  meson.build  pietray.py
libpurple/: Makefile.am  Makefile.mingw  account.c  account.h  accountopt.c  accountopt.h  accounts.c  accounts.h  action.c  action.h  attention.c  attention.h  blist.c  blist.h  blistnode.c  blistnode.h  buddy.c  buddy.h  buddyicon.c  buddyicon.h  buddylist.c  buddylist.h  chat.c  chat.h  circularbuffer.c  circularbuffer.h  cmds.c  cmds.h  connection.c  connection.h  contact.c  contact.h  conversation.c  conversation.h  conversations.c  conversations.h  conversationtypes.c  conversationtypes.h  core.c  core.h  (+128 more)
libpurple/data/: purple-url-handler.desktop.in.in  purple3-url-handler.desktop.in.in
libpurple/example/: nullclient.c
libpurple/media/: backend-fs2.c  backend-fs2.h  backend-iface.c  backend-iface.h  candidate.c  candidate.h  codec.c  codec.h  enum-types.h
libpurple/plugins/: autoaccept.c  buddynote.c  codeinline.c  debug_example.c  filectl.c  helloworld.c  idle.c  joinpart.c  log_reader.c  meson.build  notify_example.c  offlinemsg.c  one_time_password.c  pluginpref_example.c  psychic.c  purple-toast.c  signals-test.c  simple.c  statenotify.c  test-request-input.c
libpurple/plugins/keyrings/: internalkeyring.c  kwallet.cpp  meson.build  secretservice.c  wincred.c
libpurple/plugins/ssl/: ssl-gnutls.c  ssl-nss.c
libpurple/protocols/: meson.build
libpurple/protocols/bonjour/: bonjour.c  bonjour.h  bonjour_ft.c  bonjour_ft.h  buddy.c  buddy.h  dns_sd_proxy.c  dns_sd_proxy.h  jabber.c  jabber.h  mdns_avahi.c  mdns_common.c  mdns_common.h  mdns_dns_sd.c  mdns_interface.h  mdns_types.h  meson.build  parser.c  parser.h  xmpp.c  xmpp.h
libpurple/protocols/facebook/: api.c  api.h  data.c  data.h  facebook.c  facebook.h  http.c  http.h  id.h  json.c  json.h  meson.build  mqtt.c  mqtt.h  thrift.c  thrift.h  util.c  util.h
libpurple/protocols/gg/: account.c  account.h  avatar.c  avatar.h  blist.c  blist.h  chat.h  edisc.c  edisc.h  gg.c  gg.h  html.h  image-prpl.c  image-prpl.h  keymapper.h  libgadu-events.h  libgaduw.h  meson.build  message-prpl.c  message-prpl.h  multilogon.c  multilogon.h  pubdir-prpl.c  pubdir-prpl.h  purplew.c  purplew.h  resolver-purple.c  resolver-purple.h  roster.c  roster.h  servconn.c  servconn.h  status.h  tcpsocket.h  utils.h  validator.c  validator.h  xml.h
libpurple/protocols/irc/: cmds.c  dcc_send.c  irc.c  irc.h  meson.build  msgs.c  parse.c
libpurple/protocols/jabber/: Makefile.am  Makefile.mingw  adhoccommands.c  adhoccommands.h  auth.c  auth.h  auth_cyrus.c  auth_digest_md5.c  auth_digest_md5.h  auth_scram.c  auth_scram.h  auth_webex.c  bosh.c  bosh.h  buddy.c  buddy.h  caps.c  caps.h  chat.c  chat.h  data.c  disco.c  disco.h  gtalk.c  gtalk.h  ibb.c  ibb.h  iq.c  iq.h  jabber.c  jabber.h  jutil.c  jutil.h  libxmpp.c  meson.build  message.c  message.h  namespaces.h  oob.c  oob.h  (+21 more)
libpurple/protocols/mxit/: filexfer.c  (+12 more)
libpurple/tests/: Makefile.am  meson.build  test_account_option.c  test_attention_type.c  test_circular_buffer.c  test_image.c  test_protocol_action.c  test_protocol_attention.c  test_protocol_xfer.c  test_queued_output_stream.c  test_smiley.c  test_smiley_list.c  test_ui.c  test_ui.h  test_util.c
libpurple/win32/: global.mak  libc_interface.c  libc_interface.h  libc_internal.h  win32dep.c  win32dep.h  wpurpleerror.h
pidgin/: Makefile.am  Makefile.mingw  about.ui  gtk3compat.h  gtkaccount.c  gtkblist-theme-loader.c  gtkblist-theme-loader.h  gtkblist-theme.c  gtkblist-theme.h  gtkblist.c  gtkblist.h  gtkcellrendererexpander.c  gtkcellrendererexpander.h  gtkcertmgr.c  gtkconv-theme-loader.c  gtkconv-theme-loader.h  gtkconv-theme.c  gtkconv-theme.h  gtkconv.c  gtkconv.h  gtkconvwin.h  gtkdebug.c  gtkdialogs.c  gtkdialogs.h  gtkdnd-hints.c  gtkdocklet-gtk.c  gtkdocklet.c  gtkdocklet.h  gtkicon-theme-loader.c  gtkicon-theme-loader.h  gtkicon-theme.c  gtkicon-theme.h  gtkidle.c  gtkimhtml.c  gtkinternal.h  gtklog.c  gtkmain.c  gtkmedia.c  gtkmenutray.c  gtkmenutray.h  (+74 more)
pidgin/data/: im.pidgin.Pidgin.appdata.xml.in  im.pidgin.Pidgin.desktop.in.in  im.pidgin.Pidgin3.appdata.xml.in  im.pidgin.Pidgin3.desktop.in.in  meson.build
pidgin/glade/: meson.build  pidgin3.xml.in
pidgin/pixmaps/: meson.build
pidgin/plugins/: Makefile.am  Makefile.mingw  contact_priority.c  extplacement.c  gtk-signals-test.c  gtkbuddynote.c  history.c  iconaway.c  imgupload.c  mailchk.c  markerline.c  meson.build  notify.c  pidgininc.c  raw.c  relnot.c  screencap.c  spellchk.c  transparency.c  unity.c  vvconfig.c  widget-test.c  xmppconsole.c
pidgin/resources/: pidgin.gresource.xml
pidgin/win32/: gtkdocklet-win32.c  gtkwin32dep.c  prepare-workspace.sh  untar.c  untar.h  winpidgin.c
(+327 files in other folders)
