##############################################################################
# General Options

option('extraversion', type : 'string',
       description : 'extra version number to be displayed in Help->About and --help (for packagers)')

option('doc', type : 'boolean', value : false,
       description : 'build documentation with gtk-doc')

option('fortify', type : 'boolean', value : true,
       description : 'compile with FORTIFY_SOURCE support')

option('glib-errors-trace', type : 'boolean', value : false,
       description : 'print backtraces for glib errors')

option('introspection', type : 'boolean', value : true,
       description : 'build introspection data')

option('missing-dependencies', type : 'boolean', value : false,
       description : 'skip missing dependencies instead of aborting configuration')

option('nettle', type : 'boolean', value : true,
       description : 'enable Nettle support')

option('nls', type : 'boolean', value : true,
       description : 'enable installation of translation files')

option('pixmaps-install', type : 'boolean', value : true,
       description : 'enable installation of pixmap files - Pidgin still needs them!')

##############################################################################
# Libpurple Options

option('farstream', type : 'boolean', value : true,
       description : 'compile with farstream support')

option('gstreamer', type : 'boolean', value : true,
       description : 'compile with GStreamer audio support')

option('gstreamer-video', type : 'boolean', value : true,
       description : 'compile with GStreamer 1.0 Video Overlay support')

option('kwallet', type : 'boolean', value : true,
       description : 'enable KWallet support')

option('plugins', type : 'boolean', value : true,
       description : 'compile plugins')

option('secret-service', type : 'boolean', value : true,
       description : 'enable Secret Service support')

option('vv', type : 'boolean', value : true,
       description : 'compile with voice and video support')

##############################################################################
# Protocol Plugins

option('dynamic-prpls', type : 'string', value: 'all',
       description : 'specify which protocols to build dynamically')

option('avahi', type : 'boolean', value : true,
       description : 'compile with avahi (required for Bonjour support)')

option('cyrus-sasl', type : 'boolean', value : false,
       description : 'enable Cyrus SASL support for XMPP/IRC')

option('idn', type : 'boolean', value : true,
       description : 'compile with IDN support')

option('krb4', type : 'boolean', value : false,
       description : 'compile Zephyr plugin with Kerberos 4 support')

option('libgadu', type : 'boolean', value : true,
       description : 'compile with libgadu (required for GaduGadu support)')

option('meanwhile', type : 'boolean', value : true,
       description : 'compile with meanwhile')

option('silc', type : 'boolean', value : false,
       description : 'compile with SILC plugin')

option('zephyr', type : 'boolean', value : false,
       description : 'compile Zephyr plugin against external libzephyr')

##############################################################################
# Pidgin Options

option('gtkui', type : 'boolean', value : true,
       description : 'compile with GTK+ user interface')

option('cap', type : 'boolean', value : false,
       description : 'compile with Contact Availability Prediction plugin')

option('console-logging', type : 'boolean', value : false,
       description : 'compile with console logging support')

option('gestures', type : 'boolean', value : true,
       description : 'compile with the gestures plugin')

option('gevolution', type : 'boolean', value : false,
       description : 'compile with the Evolution plugin')

option('unity-integration', type : 'boolean', value : false,
       description : 'compile with support for unity integration plugin')

##############################################################################
# Finch Options

option('consoleui', type : 'boolean', value : true,
       description : 'compile with console user interface')

option('x', type : 'boolean', value : true)
